# mona

./: .gitignore  CMakeLists.txt  Makefile.osx  TODO.mdwn  goal_fs.glsl  jp-small.xcf  main.c  mona.c  mona.h  mona_draw.c  mona_draw.h  test_fs.glsl  test_vs.glsl
MonaLearning.xcodeproj/: project.pbxproj
MonaLearning.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MonaLearning.xcodeproj/project.xcworkspace/xcshareddata/: MonaLearning.xccheckout
MonaLearning.xcodeproj/project.xcworkspace/xcuserdata/jpbarrette.xcuserdatad/: UserInterfaceState.xcuserstate
MonaLearning.xcodeproj/xcuserdata/jpbarrette.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MonaLearning.xcodeproj/xcuserdata/jpbarrette.xcuserdatad/xcschemes/: MonaLearning.xcscheme  xcschememanagement.plist
mona-c.xcodeproj/: project.pbxproj
mona-c.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mona-c.xcodeproj/project.xcworkspace/xcshareddata/: mona-c.xccheckout
mona-c.xcodeproj/project.xcworkspace/xcuserdata/jpbarrette.xcuserdatad/: UserInterfaceState.xcuserstate
mona-c.xcodeproj/xcuserdata/jpbarrette.xcuserdatad/xcschemes/: mona-c.xcscheme  xcschememanagement.plist
src/: CMakeLists.txt  gl_utils.c  gl_utils.h  main.c  mona.c  mona_draw.c
src/$<TARGET_FILE_DIR:mona>/: goal_vs.glsl  test_fs.glsl
